# snaeksy_cli_mails

./: .gitignore  README.md  main.cpp  todo.md
StealthMailer/: about_this_bit.md
general_data_snaeker/: Cargo.toml  README_RUST
general_data_snaeker/decrypted/17374071407/: 17374071407.txt  17374071407_dorks.txt  Area_GeoLocation.html  Area_GeoLocation.json  Zone_GeoLocation.html  Zone_GeoLocation.json
general_data_snaeker/decrypted/katrina_cortez/: KACortez@gmail.com.txt  KACortez@gmail.com_dorks.txt  Katrina A Cortez.txt  Katrina A. Cortez 6535 BEECH TRAIL DR CONVERSE TX 78109-3373.txt  Katrina Cortez.json  Katrina Cortez.txt  Katrina_A._Cortez_6535_BEECH_TRAIL_DR_CONVERSE_TX_78109-3373.txt
general_data_snaeker/decrypted/nancy_garcia/: NANCY GARCIA 9411 DEVILS RIV CONVERSE TX 78109-3887_Dorks.txt  NANCY_GARCIA_9411_DEVILS_RIV_CONVERSE_TX_78109-3887.txt  Nancygarcia@gmail.com.txt  Nancygarcia@gmail.com_dorks.txt  nancy garcia.txt
general_data_snaeker/docs/: FIXES_SUMMARY.md  FIXES_SUMMARY_II.md  FIXES_SUMMARY_III.md  FRAMEWORK_OVERVIEW
general_data_snaeker/ps1_og/: MyCodeSigningCert.cer  USERGUIDE.md  wofl_obs-descrypt-v-0-1-0.ps1  wofl_obs-descrypt-v-0-1-1.ps1  wofl_obs-descrypt-v-0-1-2.ps1  wofl_obs-descrypt-v-0-1-3.ps1  wofl_obs-descrypt-v-0-1-4.ps1
general_data_snaeker/ps1_og/docs_old/: README.md  wofl_safety_user_guide.md  wofl_safety_user_guide_2.md
general_data_snaeker/ps1_og/ps1_old/: wofl_obs-descrypt-v-bronk.ps1  wofl_safety.ps1  wofl_safety_2.ps1
general_data_snaeker/src/: config.rs  crypto.rs  file_utils.rs  main.rs  secure_delete.rs  ui.rs
(+94 files in other folders)
