[package]
name = "wofl_obs-defuscrypt"
version = "0.2.1"
edition = "2021"
authors = ["whispr.dev"]
description = "A secure file encryption and secure deletion tool"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aes-gcm = "0.10.3"
# Add "simple" feature to pbkdf2
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
walkdir = "2.4.0"
indicatif = "0.17.7"
dialoguer = "0.11.0"
console = "0.15.7"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
directories = "5.0.1"
zeroize = "1.6.0"